--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -135,87 +135,138 @@
     <script src="../dist/js/main.js"></script>
 
 
-    <!-- The Modal -->
+    <!-- All modals -->
     <div id="myModal" class="beep-modal-hc">
         <div class="beep-modal-content-hc">
         </div>
     </div>
 
 
-    <div id="edit-profile-headline" class="modal-box edit flex floating">
+    <div id="gigModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade">
+        <div role="document" class="modal-dialog modal-md">
+        </div>
+    </div>
+
+
+    <div id="add-gig" class="add modal-box flex floating">
         <div class="modal-box-content">
             <div class="inner-modal">
+                <h3 class="page-card-name">Add gig</h3>
                 <div class="content">
-                    <div class="modal-header">
-                        <h3>Edit profile headline image</h3>
-                    </div>
                     <div class="success-message">
                         <h1 class="title">Congratulations!</h1>
                         <div class="success-content">
-                            <p>Your headline was added.</p>
+                            <p>Your gig was created.</p>
                         </div>
                         <div class="buttons">
                             <button class="mdl-button mdl-js-button close-button congrats-close">Close the modal to see it</button><span>OR</span>
-                            <button class="mdl-button mdl-js-button create-new">add new job</button>
+                            <button class="mdl-button mdl-js-button create-new">create new gig</button>
                         </div>
                     </div>
-
                     <div class="modal-body">
-
-                        <div class="form-group" id="image-headline-form">
-                            <input id="input-image-profile-he" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-                            <label for="input-image-profile-he" class="img-label">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-profile"><img id="input-image-profile-he" src="#" alt=""
-                                class="show-image empty">
+                        <div class="form-group">
+                            <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+                            <label for="input-image-gig" class="img-label"><p class="add-photo-label">Add photo</p></label><img src="images/image-video-image-file.png" alt="Add a file" id="croppie" class="file-input-first-image img-gig"><img id="input-image-gig"
+                                src="#" alt="" class="show-image empty">
                         </div>
-
-
+                        <div class="modal-inputs">
+                            <form action="POST">
+                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                                    <label for="gig-title" class="label-control gig-title-label">Gig Titles</label>
+                                    <input id="gig-title" name="gig-title" type="text" placeholder="Gig Title" class="form-control ">
+                                    <!--  class mdl-textfield__input  and mdl-textfield__label  for label-->
+                                </div>
+                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
+                                    <select id="category" class="ui dropdown">
+                      <option value="">Select Category</option>
+                      <option value="1">Software Development</option>
+                      <option value="2">Entertainment</option>
+                      <option value="3">Graphic Design</option>
+                      <option value="4">Content Writing</option>
+                      <option value="5">Accountants</option>
+                      <option value="6">Consultants</option>
+                      <option value="7">Assistants</option>
+                    </select>
+                                </div>
+                                <div style="height: 38px; float: right; margin-top: 20px" class="ui right labeled input">
+                                    <label for="reputationCost" class="ui label"><i style="font-size: 17px" class="material-icons">polymer</i></label>
+                                    <input id="reputationCost" type="text" placeholder="Cost of reputation">
+                                    <div class="ui basic label">.00</div>
+                                </div>
+                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                                    <select name="gig-tags" multiple="" class="ui fluid dropdown normal search gig-tags">
+                      <option value="">Add gig tags (limit: 10)...</option>
+                      <option value="programming">Programming</option>
+                      <option value="copywriting">Copywriting</option>
+                      <option value="userexperience">User Experience</option>
+                    </select>
+                                </div>
+                                <div class="mdl-textfield mdl-js-textfield whole-line">
+                                    <label for="description" class="label-control gig-title-label">Description (what have you done or currently do?)</label>
+                                    <textarea id="description" type="text" rows="3" name="description" class="form-control"></textarea>
+                                </div>
+                                <div class="ui right labeled input">
+                                    <label for="amount" class="ui label"><i class="material-icons">polymer</i></label>
+                                    <input id="amount" type="text" placeholder="Amount">
+                                    <div class="ui basic label">.00</div>
+                                </div>
+                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
+                                    <input type="text" name="startDate" class="date-started mdl-textfield__input">
+                                    <label for="date-from" class="mdl-textfield__label">Expire Date</label>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="mdl-button mdl-js-button close-button">Close</button>
-                        <button id="updateProfileHeadline" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
-                        <div data-mdl-for="updateProfileHeadline" class="mdl-tooltip">This text will be changed anyway.</div>
+                        <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button">Close</button>
+                        <button id="publish4" style="" class="btn btn-info lh-normal mdl-button mdl-js-button finish-button">Publish</button>
+                        <div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="new-modal-thing">
-        <div id="new-modal-wrap">
-            <!-- header -->
-            <div class="new-modal-header">
-                <!-- profile info -->
-                <div id="new-modal-owner-avatar"></div>
-                <div class="new-modal-owner-info">
-                    <div id="new-modal-owner-name">Owner Name</div>
-                    <div id="new-modal-owner-title">Owner Title</div>
-                </div>
-                <!-- other things -->
-                <div class="new-modal-others">
-                    <button data-dismiss="modal" class="mdl-button mdl-js-button close-button">Close</button>
+
+
+    <!-- Modals  Temaplates -->
+
+    <div id="redesigned-modal" class="hidden">
+        <div class="modal-content border-radius-6">
+            <div class="modal-header pdd-horizon-30">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title flex-block flex-center">
+                    <div id="new-modal-owner-avatar" class="mrg-right-15"></div>
+                    <div>
+                        <span id="new-modal-owner-name">Owner Name</span> <br>
+                        <span id="new-modal-owner-title">Owner Title</span>
+                    </div>
+                </h4>
+            </div>
+            <div class="modal-body border-radius-6" style="overflow: hidden;">
+                <div class="pdd-horizon-30">
+                    <div class="row">
+                        <div class="ml-auto col-xs-12">
+                            <h3 class="font-size-24 color-blue" id="redesigned-modal-gig-title">I'll design a smart contracts for ethereum platform</h3>
+                        </div>
+                        <div class="col-xs-12 text-center mrg-vertical-10">
+                            <div id="redesigned-modal-gig-image" style="height: 200px;"></div>
+                        </div>
+                        <p id="redesigned-modal-description" class="col-md-12 font-size-16">Let me see your identification. You don't need to see his identification. We don't need to see his identification. These are not the droids.</p>
+                    </div>
                 </div>
             </div>
-            <!-- image -->
-            <div id="new-modal-gig-image">
-                <div id="new-modal-gig-title">
-                    Title
-                </div>
-                <div id="new-modal-description">
-                    Description
-                </div>
-            </div>
-            <div class="new-modal-footer">
-                <div class="new-modal-footer-buttons">
-                    <button class="mdl-button mdl-js-button buy">
-                Hold &nbsp; <span id="new-modal-gig-price-req">0.00 </span> &nbsp;
-                <i class="material-icons">polymer</i> &nbsp;
-                Price &nbsp; <span id="new-modal-gig-price"> 0.00 </span> &nbsp; Order
-          </button>
+            <div class="modal-footer pdd-horizon-30">
+                <div class="text-right">
+                    <button class="btn btn-default btn-sm no-mrg" data-dismiss="modal">
+                  Hold &nbsp; <span id="redesigned-modal-gig-price-req">0.00 </span> &nbsp;
+                  <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;
+                  Price &nbsp; <span id="redesigned-modal-gig-price"> 0.00 </span> &nbsp; Order
+                </button>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
