profile page tab inner box

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -113,7 +113,7 @@
                     <div open-modal="#add-gig" class="plusIcon gigs active open-modal"><i class="material-icons">library_add</i></div>
                     <div open-modal="#add-portfolio" class="plusIcon portfolio open-modal"><i class="material-icons">note_add</i></div>
                     <!-- All the information about above listed tabs.-->
-                    <div class="tab-content col-xs-12">
+                    <div class="tab-content main-tab-content col-xs-12">
                         <!-- Gigs TAB-->
                         <div id="gigs" role="tabpanel" class="tab-content active in col-xs-12 ">
                             <div class="gigs-container">
