update for profile page

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -79,11 +79,11 @@
                     <div class="user-info-wrap">
                         <div class="user-avatar"></div>
                         <div class="user-info color-white">
-                            <p class="user-name font-size-28 mrg-btm-20">Letice Ivans</p>
+                            <p class="user-name font-size-28 mrg-btm-20"></p>
                             <p class="user-role font-size-14">Creative Designer</p>
-                            <div class="user-item"><span class="item-title font-size-14">Skills:</span><span class="item">Adobe Photoshop</span><span class="item">Adobe Illustrator</span></div>
-                            <div class="user-item"><span class="item-title font-size-14">Languagee:</span><span class="item">English</span><span class="item">Italian</span></div>
-                            <p class="user-description font-size-16 mrg-vertical-20">Hello I'm letice, I love to make creative designs and illustrations. Would like to work on interesting projects and meet people.</p>
+                            <div class="user-item skills"><span class="item-title font-size-14">Skills:</span></div>
+                            <div class="user-item languages"><span class="item-title font-size-14">Languages:</span></div>
+                            <p class="user-description font-size-16 mrg-vertical-20"></p>
                             <div class="profile-social">
                                 <ul class="list-inline">
                                     <li><a href=""><i class="icon-facebook"></i></a></li>
