quick update + 1 route /profiles

--- a/ethnode/webui/src/profiles.html
+++ b/ethnode/webui/src/profiles.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethearnal - Home page</title>
+    <title>Ethearnal - Profiles</title>
     <link rel="stylesheet" href="styles/hcmodals.css">
     <!-- FAVICON-->
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
