--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="navigation" class="collapse navbar-collapse tab-info">
                     <ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
-                        <li class="nav-item"><a href="/ui" class="nav-link active">Gigs</a></li>
+                        <li class="nav-item"><a href="/ui" class="nav-link active">Gigs</a></li> <!-- add class active -->
                         <li class="nav-item"><a href="" class="nav-link" load="profiles">Profiles</a></li>
                         <li class="nav-item"><a href="" open-modal="#add-gig" class="nav-link open-modal">New Gig</a></li>
                         <li id="settings-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="profile view-profile">
