profile tab flex fix

--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -90,7 +90,7 @@
                     <div class="tab-content main-tab-content col-xs-12">
                         <!-- Gigs TAB-->
                         <div id="gigs" role="tabpanel" class="tab-content active in col-xs-12 ">
-                            <div class="gigs-container">
+                            <div class="gigs-container gigs-profile-container">
                             </div>
                         </div>
                         <!-- Portfolio TAB-->
