--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="navigation" class="collapse navbar-collapse tab-info">
                     <ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
-                        <li class="nav-item"><a href="/ui" class="nav-link active">Gigs</a></li>
+                        <li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
                         <li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
                         <li class="nav-item"><a href="" open-modal="#add-gig" class="nav-link open-modal">New Gig</a></li>
                         <li id="settings-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="profile view-profile">
@@ -83,7 +83,24 @@
             </div>
 
             <div class="gigs col-md-9">
-                <div class="profiles-container">Profiles</div>
+                <div class="profiles-container">
+                    <div class="user-card profile-user-card">
+                        <div class="img-card">
+                            <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button btn-info-edit"><i class="material-icons">more_vert</i></button>
+                            <ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">
+                                <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
+                                <li class="mdl-menu__item delete">Delete</li>
+                            </ul>
+                            <img src="http://127.0.0.1:5678/api/cdn/v1/resource?hkey=cea46ea8d018f773eccb8cbbf4863c4b4d609bb170f8451b7b72347e10e48e2b">
+                            <div class="card-label">Graphic</div>
+                        </div>
+                        <div class="user-profile-img">
+                            <img id="imgavadce2047a8d60317dd02672bb490f65369a7a49e18865862ebd48b4beaea6a6d" src="http://127.0.0.1:5678/api/cdn/v1/resource?hkey=ed4c72842252ab74df66c255b4232e120edada4ef80b374b5a30842126935489" alt="Avatar">
+                        </div>
+                        <p class="user-name">Martina Fioghni</p>
+                        <p class="user-role">Graphic Design</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
