update for UI and other pages

--- a/ethnode/webui/profiles.html
+++ b/ethnode/webui/profiles.html
@@ -76,36 +76,24 @@
 
     <section class="profiles-page-content">
         <div class="container">
-            <div class="filters col-md-3">
-                <div class="filter category">
-                    <h6 style="margin-top: 0px; padding-top: 0px;">Search People</h6>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-heading border bottom">
+                        <h4 class="card-title">Search Profiles</h4>
+                    </div>
+                    <div class="filter card-body">
+                        <div class="form-group">
+                            <label>Search by name</label>
+                            <input id="search-header" type="text" placeholder="Search by name..." class="form-control">
+                        </div>
+                    </div>
                 </div>
             </div>
-
             <div class="gigs col-md-9">
                 <div class="profiles-container"></div>
             </div>
         </div>
     </section>
-
-
-    <!-- OTHER PROFILE other profile view -->
-    <section id="other-profile-headline" class="background-image2">
-        <!--div class="button-next" style="margin: auto;">
-        <i id="myBtn--" open-modal="#edit-profile-headline" class="material-icons open-modal">add_a_photo</i>&nbsp;</div-->
-        <!--div class="button-next"><i class="material-icons">keyboard_arrow_right</i></div-->
-        <div class="items">
-            <div class="item">
-                <!--img style="" id="profile-headline" src="images/background-downtown.png" alt="Building"
-            class="aspecto-img"-->
-                <div id="other-profile-headline-img" class="aspecto-img"></div>
-
-            </div>
-        </div>
-    </section>
-
-
-
 
     <!-- END OTHER PROFILE  -->
 
